# Fit_Tracker

./: README.md
Fit-Tracker/: CLAUDE.md  IMPLEMENTATION_CHECKLIST.md  fittrack.db  pyproject.toml  test.db
Fit-Tracker/.claude/: settings.local.json
Fit-Tracker/.github/: copilot-instructions.md
Fit-Tracker/docs/: BOOTSTRAP_PROMPT.md  FitTrack-PRD-v1.0.md  IMPLEMENTATION_PLAN.md
Fit-Tracker/keys/: jwt_private_key.pem  jwt_public_key.pem
Fit-Tracker/src/fittrack/: database.py  main.py
Fit-Tracker/src/fittrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Fit-Tracker/src/fittrack/api/: __init__.py  dependencies.py
Fit-Tracker/src/fittrack/api/routes/: __init__.py
Fit-Tracker/src/fittrack/api/routes/v1/: auth.py  users.py
Fit-Tracker/src/fittrack/api/schemas/: auth.py  user.py
Fit-Tracker/src/fittrack/models/: base.py  user.py
Fit-Tracker/src/fittrack/security/: authentication.py  authorization.py
Fit-Tracker/src/fittrack/services/: auth_service.py
Fit-Tracker/tests/: conftest.py
Fit-Tracker/tests/integration/api/: test_auth_endpoints.py  test_protected_endpoints.py
Fit-Tracker/tests/unit/: test_base_models.py  test_database.py  test_user_model.py
Fit-Tracker/tests/unit/security/: test_authentication.py  test_authorization.py
Fit-Tracker/tests/unit/services/: test_auth_service.py
genx_rag_bot/: .env.example  app.py  embed.py  ingest.py  rag_chain.py  requirements.txt
genx_rag_bot/data/: examples.txt  replies.json
genx_rag_bot/faiss_index/: index.faiss  index.pkl
genx_rag_bot/prompts/: fallback.txt  system_dm.txt
